# Speech-Emotion-Recognition

./: Makefile  README.md  pyproject.toml
notebooks/: 1.Data Preparation.ipynb  2.EDA.ipynb  3.Feature Engineering and Modelling.ipynb
