[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Speech emotion recognition using LSTM"
authors = [
  { name = "Youssef Atef" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "fastparquet>=2024.11.0",
    "kagglehub>=0.3.12",
    "librosa>=0.11.0",
    "loguru",
    "mkdocs",
    "pip",
    "pyarrow>=20.0.0",
    "python-dotenv",
    "ruff",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

